test/langtools/tools/javac/ImplicitClass/SourceLevelErrorPosition.out
SourceLevelErrorPosition.java:8:1: compiler.err.feature.not.supported.in.source.plural: (compiler.misc.feature.implicit.classes), 24, 25
1 error
